--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.5.0",
     "ngx-cookie-service": "^3.0.4",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
